<resources>
    <string name="app_name">Pumpkin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="blogin">Login</string>
    <string name="register_here">Register Here</string>

    <string name="we_welcome_you">We welcome you :)</string>
    <string name="age">Age</string>
    <string name="user_area_username">Username</string>

    <string name="reg_name">Name</string>
    <string name="reg_age">Age</string>
    <string name="reg_password">Password</string>
    <string name="reg_button_register">Register</string>
    <string name="reg_username">Username</string>


    <string name="right_name">Alex</string>
    <string name="right_password">12</string>

    <string name="frag1_text">Fragment 1</string>
    <string name="frag2_text">Fragment 2</string>
    <string name="MainMenu">Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="fragments">Fragments</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="search_title">Search</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="_8942">⋮</string>


</resources>
