<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="com.example.admin.pumpkin.LoginActivity" >




    <TextView
        android:text="@string/register_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRegisterHere"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_below="@+id/bLogin"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:clickable="false" />

    <Button
        android:text="@string/blogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bLogin"
        style="@android:style/Widget.Button"
        android:backgroundTint="?android:attr/colorPressedHighlight"
        android:elevation="0dp"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etUsername"
        android:hint="@string/username"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/etUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/pumpkin"
        android:id="@+id/imageView5"
        android:layout_below="@+id/tvRegisterHere"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:contentDescription="@android:string/cancel" />

</RelativeLayout>
